# vrac

./: .gitignore  check_files.py  check_files_nnunet.py  combine_jpeg.py  compare_orientation_convention.py  compare_weights.py  copy_files_from_json.py  cp_sacrum_seg_to_new_derivatives.sh  cp_sc_totalspineseg.py  create_jsonsidecars.py  expand_niftii.py  fetch_information_from_config.py  fix_canproco_STIR.py  fix_canproco_calgary.py  generate_middle_slices_BIDS.py  keep_largest_component.py  keep_largest_masks.sh  locate_data_sexy_fig.py  map_structure.py  measure_vertebrae.py  plot_sinusoide.py  pyproject.toml  select_contrast_config.py  select_image_benhmark.py  split_nifti.py  update_labels_nnunet.py  visualize_benchmark.py
BIDSIFICATION/: bidsify_lumbar-balgrist.py  bidsify_lumbar-usf.py  convert_to_BIDS_KL.py  convert_to_BIDS_UR.py  finalize_curation_BIDS_spider.py  fix_bids_space-other.py
inf1007/: plot_penguins.py  plot_penguins_3d.py
nnunet/: analyse_network_layers_nnunet.py  custom_predictor_nnunet.py  nnUNetTrainerDAExt.py  nnUNetTrainerFT.py  nnUNetTrainerMRI.py  nnunet_network.py
preprocessing/: evaluate_image_intensity.py
spinereports/: analysis_balgrist.py  compute_inter_rater_agreement.py  fetch_data_info.py  measure_stability.py  plot_fast_MRI.py
totalspineseg/: bidsify_active_learning_data.py  bidsify_canal_and_spine.py  compare_measures_totalspineseg.py  correct_spine_labels_spider.py  create_jsonsidecars.py  measures_by_group.py  nnInteractive_refine.py  plot_discs_intensity-thickness.py  plot_discs_intensity-thickness_spider.py  qc_tss.py  (+2 more)
(+38 files in other folders)
